# NavIRL

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD_FIXES.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MANIFEST.in  NEXT_VERSION.md  README.md  REPRODUCIBILITY.md  ROADMAP.md  RVO2.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pr-validation.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_CURRENT.md  ARCHITECTURE_TARGET.md  DATAFORMAT_SPEC.md  GETTING_STARTED.md  METRICS_SPEC.md  README.md  RESEARCH_CONTEXT.md  ROUTINE_COMPILER.md  SCENARIO_SPEC.md  TUNING.md  VERIFY_GATE.md
examples/: __init__.py  quickstart.py
examples/routines/: office_worker_daily.yaml  restaurant_customer.yaml  shopping_group_member.yaml
navirl/: __init__.py  __main__.py  artifacts.py  cli.py  pipeline.py  plugins.py
navirl/agents/: __init__.py  a2c.py  base.py  dqn.py  ppo.py  sac.py  td3.py
navirl/agents/networks/: __init__.py  attention.py  cnn.py  extractors.py  mlp.py  policy_heads.py  rnn.py
navirl/backends/: __init__.py
navirl/backends/continuous/: __init__.py  adapter.py  backend.py  environment.py  obstacles.py  physics.py
navirl/backends/grid2d/: __init__.py  backend.py  constants.py  environment.py  maps.py  orca.py
navirl/config/: __init__.py  presets.py  registry.py  serialization.py  validation.py
navirl/coordination/: __init__.py  communication.py  consensus.py  formation.py  marl.py  planning.py  task_allocation.py
navirl/core/: __init__.py  constants.py  env.py  maps.py  plugin_validation.py  registry.py  seeds.py  types.py
navirl/data/: __init__.py  augmentation.py  datasets.py  loaders.py  preprocessing.py  trajectory.py  trajectory_dataset.py
navirl/envs/: __init__.py  base_env.py  crowd_env.py  multi_agent_env.py  scenarios.py  wrappers.py
navirl/evaluation/: __init__.py  analysis.py  benchmark.py  comparisons.py  metrics_extended.py  trajectory_metrics.py
navirl/experiments/: __init__.py  aggregator.py  runner.py  templates.py
navirl/humans/: __init__.py  base.py  behavior_model.py  crowd_generator.py  pedestrian_state.py  social_groups.py
navirl/humans/orca/: __init__.py  controller.py
navirl/humans/orca_plus/: __init__.py  controller.py
navirl/humans/policies/: __init__.py
navirl/humans/replay/: __init__.py  controller.py
navirl/humans/scripted/: __init__.py  controller.py
navirl/imitation/: __init__.py  airl.py  bc.py  dagger.py  dataset.py  gail.py  irl.py  reward_learning.py
navirl/logging/: __init__.py  episode_log.py  file_logger.py  tensorboard_logger.py  wandb_logger.py
navirl/maps/: __init__.py  grid_map.py
navirl/metrics/: __init__.py  base.py  spec.md  standard.py
navirl/models/: __init__.py  behavior_tree.py  crowd_dynamics.py  group_behavior.py  learned_policy.py  learned_robot_policy.py  power_law.py  social_force.py  velocity_obstacle.py
navirl/networks/: __init__.py
navirl/orchestration/: __init__.py  executor.py  manifest.py  models.py  orchestrator.py  result_store.py  worker.py
navirl/overseer/: __init__.py  layout.py  provider.py  rerank.py  review.py
navirl/packs/: __init__.py  loader.py  reporter.py  runner.py  schema.py
navirl/planning/: __init__.py  base.py  global_planners.py
navirl/prediction/: __init__.py  base.py  constant_velocity.py  goal_conditioned.py  social_gan.py  social_lstm.py  trajectron.py
navirl/repro/: __init__.py  checklist.py  compliance.py  generator.py  package.py  replay.py
navirl/rewards/: __init__.py  base.py  navigation.py
navirl/robots/: __init__.py  ackermann.py  base.py  differential_drive.py  fleet.py  holonomic.py  sensors_config.py
navirl/ros/: __init__.py  bridges.py  conversions.py  costmap.py  launch_helpers.py  node.py  tf_utils.py
navirl/routines/: __init__.py  behavior_integration.py  compiler.py  schema.py
navirl/safety/: __init__.py  constrained_optimization.py  constraints.py  monitoring.py  risk_assessment.py  shield.py
navirl/scenarios/: __init__.py  load.py  schema.json  validate.py
navirl/sensors/: __init__.py  base.py  camera.py  fusion.py  imu.py  lidar.py  occupancy_grid.py  pedestrian_detector.py
navirl/simulation/: __init__.py  clock.py  entities.py  events.py  physics.py  runner.py  world.py
navirl/training/: __init__.py  buffer.py  callbacks.py  curriculum.py  experiment.py  parallel.py  schedulers.py  trainer.py
navirl/tune/: __init__.py  runner.py
navirl/utils/: __init__.py  config_utils.py  geometry.py  math_utils.py  spatial.py  timing.py
navirl/verify/: __init__.py  judge.py  runner.py  validators.py
navirl/viz/: __init__.py  render.py  trajectory_viz.py  viewer.py
research/: README.md
research/templates/: full_library.yaml  orca_param_study.yaml  seed_sweep.yaml
scripts/: run_wainscott_vlm_tune.sh
tasks/: BACKLOG.md  PLAN.md
tests/: conftest.py  test_agents.py  test_agents_base.py  test_agents_base_coverage.py  test_agents_networks_exports.py  test_aggregator.py  test_anchor_layout.py  test_artifacts_retention.py  test_async_vec_env.py  test_augmentation.py  test_baseline_astar_controller.py  test_batch_experiments.py  test_behavior_model_decisions.py  test_behavior_tree.py  test_callbacks_coverage.py  test_cli_commands.py  test_cli_overseer_layout.py  test_communication_extended.py  test_config.py  test_config_domain_validators.py  test_config_utils.py  test_constraints_coverage.py  test_continuous_backend.py  test_continuous_obstacles.py  test_continuous_physics.py  test_coordination.py  test_coordination_communication.py  test_coordination_coverage.py  test_core_env_init.py  test_core_registry_validation.py  test_coverage_backend_validate_eval.py  test_coverage_gaps.py  test_coverage_registry_allocation_pedestrian.py  test_crowd_dynamics.py  test_crowd_generator_coverage.py  test_data.py  test_data_loaders_preprocessing.py  test_datasets_eth_ucy.py  test_datasets_parsing.py  test_demonstration_dataset.py  (+133 more)
(+9 files in other folders)
